@@ -8,39 +8,37 @@ import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class Main {
     public static void wordInWordsCounter() {
         int counter = 0;
         List<String> allWords = readWords().stream()
                 .filter(word -> word.length() > 2)
-                .map(word -> word.contains("/") ? word.split("/")[0] : word) //part of words list contains sign '/' so here I cut it
-                .collect(Collectors.toList());
-        System.out.println("Ilość słow załadowanych do bazy: " + allWords.size());
+                .map(word -> word.contains("/") ? word.split("/")[0] : word).toList();
+        System.out.println("Words' quantity added to the database: " + allWords.size());
         List<String> resultList = new ArrayList<>();
-        String keyWord = getStringInput("Z jakiego wyrazu wyszukać słowa?");
+        String keyWord = getStringInput("Key word:");
         for (String word : allWords) {
             if (analyzer(keyWord, word)) {
                 counter++;
                 resultList.add(word);
             }
         }
-        System.out.println("Znalazlem: " + counter + ". Przeszukalem: " + allWords.size());
+        System.out.println("Found: " + counter + ". Searched: " + allWords.size());
         System.out.println(resultList);
         fileSaver(resultList);
     }
 
     public static List<String> readWords() {
-        Path path = Paths.get(getStringInput("Podaj ścieżkę do pliku z listą słów:"));
+        Path path = Paths.get(getStringInput("Enter dictionary file's path:"));
         List<String> words;
-        while(true) {
+        while (true) {
             try {
                 words = Files.readAllLines(path);
                 return words;
             } catch (IOException e) {
-                System.out.println("Nie mogę wczytać pliku. " + e.getMessage());
-                System.out.println("Podaj ścieżkę do pliku jeszcze raz:");
+                System.out.println("Cannot read the file. " + e.getMessage());
+                System.out.println("Enter file's path again:");
             }
         }
 
@@ -72,11 +70,11 @@ public class Main {
     }
 
     public static void fileSaver(List<String> listToSave) {
-        Path path = Paths.get("znalezione-slowa.txt");
+        Path path = Paths.get("found-words.txt");
         try {
             Files.write(path, listToSave, StandardOpenOption.CREATE);
         } catch (IOException e) {
-            System.out.println("Nie mozna utworzyc pliku. " + e.getMessage());
+            System.out.println("Cannot find a file. " + e.getMessage());
         }
     }
 
